src/objects/SalesHeader__c.object
<CustomObject>
    <fields>
        <fullName>AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountLookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesHeaders</relationshipLabel>
        <relationshipName>SalesHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contactlookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contactlookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SalesHeaders</relationshipLabel>
        <relationshipName>SalesHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status should be open or close</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SalesHeader</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SalesHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>